--- a/src/components/WorkExperience/Experience.module.css
+++ b/src/components/WorkExperience/Experience.module.css
@@ -3,7 +3,7 @@
   justify-content: center;
   margin-top: 2rem;
   font-family: "Montserrat", sans-serif;
-  padding-bottom: 2rem;
+  padding-bottom: 3rem;
 }
 
 .company {
